--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Excursion App</title>
+    <link href="./resources/style.css", type = "text/css", rel="stylesheet"></link>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
