--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <h1>Discover hidden places in the world around you</h1>
       <h4><a href="https://vuen5nqaspnmn2jcum2339fdpb3ik51ljgs0akcpp31ca33vnl30.cc-propeller.cloud/#">
         Download Excursion (Coming soon!)</a></h4>
-
+      <video><source src="./resources/video/excursion.mp4" type="video/mp4">
+        Download so you can support this video.
+      </video>
 
   </body>
 </html>
