--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <h1>Discover hidden places in the world around you</h1>
       <h4><a href="https://vuen5nqaspnmn2jcum2339fdpb3ik51ljgs0akcpp31ca33vnl30.cc-propeller.cloud/#">
         Download Excursion (Coming soon!)</a></h4>
-      <video><source src="./resources/video/excursion.mp4" type="video/mp4">
+      <video src="./resources/video/excursion.mp4" autoplay muted loop>
         Download so you can support this video.
       </video>
+    <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="./resources/images/camp.jpg"></img>
+        <img src="./resources/images/phone.png"></img>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <h4><a href="https://vuen5nqaspnmn2jcum2339fdpb3ik51ljgs0akcpp31ca33vnl30.cc-propeller.cloud/#">
+      Download Excursion (Coming soon!)</a></h4>
 
+    <p>Excursion</p>
   </body>
 </html>
