finalize html & css

--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
   </head>
   <body>
     <h1><div class="discover"> Discover hidden places in the world around you</div></h1>
-      <h4><div class ="click"><a href="https://vuen5nqaspnmn2jcum2339fdpb3ik51ljgs0akcpp31ca33vnl30.cc-propeller.cloud/#">
-        Download Excursion (Coming soon!)</a></div></h4>
+      <h4><a href="https://vuen5nqaspnmn2jcum2339fdpb3ik51ljgs0akcpp31ca33vnl30.cc-propeller.cloud/#">
+        Download Excursion (Coming soon!)</a></h4>
       <video src="./resources/video/excursion.mp4" autoplay muted loop>
         Download so you can support this video.
       </video>
     <h2>Your personal travel guide</h2>
-      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><div class="desc">Excursion remembers places you like, and recommends new points of interest around you.</div>
+      </p>
         <img src="./resources/images/camp.jpg"></img>
         <br>
         <br>
         <img src="./resources/images/phone.png"></img>
     <h2>Coming Soon for iPhone and Android</h2>
-    <h4><div class = "click>"><a href="https://vuen5nqaspnmn2jcum2339fdpb3ik51ljgs0akcpp31ca33vnl30.cc-propeller.cloud/#">
-      Download Excursion (Coming soon!)</a></div></h4>
+    <h4><a href="https://vuen5nqaspnmn2jcum2339fdpb3ik51ljgs0akcpp31ca33vnl30.cc-propeller.cloud/#">
+      Download Excursion (Coming soon!)</a></h4>
 
-    <p><div class="copyright">&#9400;Excursion</div></p>
+    <p><div id="copyright">&#9400;Excursion</div></p>
   </body>
 </html>
